2001-10-05  Darin Adler  <darin@bentspoon.com>

	* libnautilus-private/nautilus-icon-factory.c: Remove gratuitous
	suffixes from the icon file search. We now look only for .svg and
	.png and .jpg files. Lets use .png files most of the time.

2001-10-05  Darin Adler  <darin@bentspoon.com>

	* eazel-logos: removed
	* libnautilus-private/nautilus-file-utilities.c:
	(nautilus_pixmap_file): Remove the code to look for Eazel logos.

	* configure.in:
	* Makefile.am:
	* nautilus.spec.in:
	Remove the code to include the Eazel logos in the tarball and
	the package.

	* HACKING: Remove the instructions on how to omit the Eazel logos.

2001-10-05  Benedikt Roth  <Benedikt.Roth@gmx.net>

 	* src/file-manager/fm-properties-window.c: (uri_is_local_image),
 	(fm_properties_window_drag_data_received),
 	(create_image_widget_for_file):
 	Implemented DnD for the icon in the file properties dialog

2001-10-04  Darin Adler  <darin@bentspoon.com>

	A bit more renaming to be explicit about "display name".
	This is slightly gratuitious, because we don't really need to be
	explicit about which name in every case, but it does no harm and
	a tiny bit of good.

	* components/tree/nautilus-tree-view.c: (ctree_compare_rows):
	* libnautilus-private/nautilus-file.c: (compare_by_display_name),
	(compare_by_full_path), (nautilus_file_compare_for_sort_internal),
	(compare_by_display_name_cover),
	(nautilus_file_list_sort_by_display_name),
	(nautilus_self_check_file):
	* libnautilus-private/nautilus-file.h:
	* libnautilus-private/nautilus-global-preferences.c:
	(default_icon_view_sort_order_or_manual_layout_changed_callback):
	* src/file-manager/fm-desktop-icon-view.c:
	(desktop_icons_compare_callback):
	* src/file-manager/fm-directory-view.c:
	(update_directory_in_scripts_menu):
	* src/file-manager/fm-icon-view.c: (get_default_sort_order),
	(icon_container_compare_icons_by_name_callback):
	* src/file-manager/fm-list-view.c: (compare_rows_by_name),