@@ -117,10 +117,10 @@ dist-hook: nautilus.spec
 ##################################################################
 
 install-data-hook: nautilus-clean.sh
-	$(mkinstalldirs) $(DESTDIR)/$(prefix)/bin
+	$(mkinstalldirs) $(DESTDIR)$(prefix)/bin
 	@list='nautilus-clean.sh'; for p in $$list; do\
 	  if test -f $(srcdir)/$$p; then \
-	    echo "  $(INSTALL_PROGRAM) $(srcdir)/$$p $(DESTDIR)/$(prefix)/bin/$$p"; \
-	    $(INSTALL_PROGRAM) $(srcdir)/$$p $(DESTDIR)/$(prefix)/bin/$$p; \
+	    echo "  $(INSTALL_PROGRAM) $(srcdir)/$$p $(DESTDIR)$(prefix)/bin/$$p"; \
+	    $(INSTALL_PROGRAM) $(srcdir)/$$p $(DESTDIR)$(prefix)/bin/$$p; \
 	  else :; fi; \
 	done
