@@ -6,11 +6,11 @@ EXTRA_DIST=			\
 	$(NULL)
 
 install-data-hook: nautilus-verify-rpm.sh nautilus-restore-settings-to-default.sh
-	$(mkinstalldirs) $(DESTDIR)/$(prefix)/bin
+	$(mkinstalldirs) $(DESTDIR)$(prefix)/bin
 	@list='nautilus-verify-rpm.sh nautilus-restore-settings-to-default.sh'; for p in $$list; do\
 	  if test -f $(srcdir)/$$p; then \
-	    echo "  $(INSTALL_PROGRAM) $(srcdir)/$$p $(DESTDIR)/$(prefix)/bin/$$p"; \
-	    $(INSTALL_PROGRAM) $(srcdir)/$$p $(DESTDIR)/$(prefix)/bin/$$p; \
+	    echo "  $(INSTALL_PROGRAM) $(srcdir)/$$p $(DESTDIR)$(prefix)/bin/$$p"; \
+	    $(INSTALL_PROGRAM) $(srcdir)/$$p $(DESTDIR)$(prefix)/bin/$$p; \
 	  else :; fi; \
 	done
 
