@@ -1,3 +1,13 @@
+2001-10-07  Darin Adler  <darin@bentspoon.com>
+
+	* Makefile.am:
+	* data/Makefile.am:
+	* helper-scripts/Makefile.am:
+	A few DESTDIR fixes.
+
+	* libnautilus-private/nautilus-icon-factory.c:
+	Cache more icons. The old number was arbitrary and way too small.
+
 2001-10-05  Darin Adler  <darin@bentspoon.com>
 
 	* libnautilus-private/nautilus-icon-factory.c: Remove gratuitous
